--- a/OktaAspNetExample/Web.config
+++ b/OktaAspNetExample/Web.config
@@ -11,9 +11,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     
     <!-- 1. Replace these values with your Okta configuration -->
-    <add key="okta:ClientId" value="{clientId}" />
-    <add key="okta:ClientSecret" value="{clientSecret}" />
-    <add key="okta:OrgUri" value="https://{yourOktaDomain}.com/oauth2/default" />
+    <add key="okta:ClientId" value="0oabwzs12MHd9974L356" />
+    <add key="okta:ClientSecret" value="aNSTdq93LzIpXa6faaTTS6dxrOwRGKJkGQoAcC-V" />
+    <add key="okta:OrgUri" value="https://dev-946831.okta.com/oauth2/default" />
     
     <!-- 2. Update the Okta application with these values -->
     <add key="okta:RedirectUri" value="http://localhost:8080/authorization-code/callback" />
